// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ?Get started                                                                                     │
│                                                                                                  │
│  How would you like to connect Gemini CLI for this project?                                      │
│                                                                                                  │
│  (selected) (not        (not     (not      (not selected)(not selected)(not selecte(not          │
│  Sign in witselected) Usselected)selected) Local LM StudiLocal Llama.cpLocal vLLM  selected)     │
│  Google     Gemini API  Vertex AILocal     (draft)       (draft)       (draft)     Local SGLang  │
│             Key                  Ollama                                            (draft)       │
│                                                                                                  │
│  Something went wrong                                                                            │
│                                                                                                  │
│  (Use Enter to select)                                                                           │
│                                                                                                  │
│  Terms of Services and Privacy Notice for Gemini CLI                                             │
│                                                                                                  │
│  https://geminicli.com/docs/resources/tos-privacy/                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ?Get started                                                                                     │
│                                                                                                  │
│  How would you like to connect Gemini CLI for this project?                                      │
│                                                                                                  │
│  (selected) (not        (not     (not      (not selected)(not selected)(not selecte(not          │
│  Sign in witselected) Usselected)selected) Local LM StudiLocal Llama.cpLocal vLLM  selected)     │
│  Google     Gemini API  Vertex AILocal     (draft)       (draft)       (draft)     Local SGLang  │
│             Key                  Ollama                                            (draft)       │
│                                                                                                  │
│  (Use Enter to select)                                                                           │
│                                                                                                  │
│  Terms of Services and Privacy Notice for Gemini CLI                                             │
│                                                                                                  │
│  https://geminicli.com/docs/resources/tos-privacy/                                               │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with enforced auth type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? Get started                                                                                    │
│                                                                                                  │
│   How would you like to connect Gemini CLI for this project?                                     │
│                                                                                                  │
│   (selected) Use Gemini API Key                                                                  │
│                                                                                                  │
│   (Use Enter to select)                                                                          │
│                                                                                                  │
│   Terms of Services and Privacy Notice for Gemini CLI                                            │
│                                                                                                  │
│   https://geminicli.com/docs/resources/tos-privacy/                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
